src/tests/snapshots/integration__owners__api_token_can_list_invitations.snap
---
source: src/tests/owners.rs
expression: invitations
---
{
  "invitations": [
    {
      "invitee_id": 1,
      "inviter_id": 2,
      "crate_id": 1,
      "crate_name": "invited_crate",
      "created_at": "[datetime]",
      "expires_at": "[datetime]"
    }
  ],
  "users": [
    {
      "id": 1,
      "login": "foo",
      "name": null,
      "avatar": null,
      "url": "https://github.com/foo",
      "github_username_matches": true,
      "created_at": "[datetime]"
    },
    {
      "id": 2,
      "login": "inviter",
      "name": null,
      "avatar": null,
      "url": "https://github.com/inviter",
      "github_username_matches": true,
      "created_at": "[datetime]"
    }
  ]
}
