src/tests/snapshots/integration__owners__check_ownership_one_crate-2.snap
---
source: src/tests/owners.rs
expression: response.json()
---
{
  "users": [
    {
      "avatar": null,
      "id": 1,
      "kind": "user",
      "login": "foo",
      "name": null,
      "url": "https://github.com/foo"
    },
    {
      "avatar": null,
      "id": 2,
      "kind": "user",
      "login": "bar",
      "name": null,
      "url": "https://github.com/bar"
    },
    {
      "avatar": null,
      "id": 1,
      "kind": "team",
      "login": "github:test_org:team_sloth",
      "name": null,
      "url": "https://github.com/test_org"
    },
    {
      "avatar": null,
      "id": 2,
      "kind": "team",
      "login": "github:test_org:team_ferret",
      "name": null,
      "url": "https://github.com/test_org"
    }
  ]
}
