src/tests/snapshots/integration__owners__invitations_list_does_not_include_expired_invites_v1.snap
---
source: src/tests/owners.rs
expression: invitations
---
{
  "crate_owner_invitations": [
    {
      "invitee_id": 2,
      "inviter_id": 1,
      "invited_by_username": "foo",
      "crate_name": "invited_crate_2",
      "crate_id": 2,
      "created_at": "[datetime]",
      "expires_at": "[datetime]"
    }
  ],
  "users": [
    {
      "id": 1,
      "login": "foo",
      "name": null,
      "avatar": null,
      "url": "https://github.com/foo",
      "github_username_matches": true,
      "created_at": "[datetime]"
    },
    {
      "id": 2,
      "login": "invited_user",
      "name": null,
      "avatar": null,
      "url": "https://github.com/invited_user",
      "github_username_matches": true,
      "created_at": "[datetime]"
    }
  ]
}
