src/tests/snapshots/integration__owners__modify_multiple_owners-10.snap
---
source: src/tests/owners.rs
expression: app.emails_snapshot().await
---
To: user2@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Ownership invitation for "owners_multiple"
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Crates.io user foo has invited you to become an owner of the crate owners_multiple!

Visit https://crates.io/accept-invite/[invite-token] to accept this invitation.

You can also go to https://crates.io/me/pending-invites to manage all of your crate ownership invitations.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Crates.io user foo has invited you to become an owner of the crate <strong>owners_multiple</strong>!</p>

<p>Visit <a href="https://crates.io/accept-invite/[invite-token]">https://crates.io/accept-invite/[invite-token]</a> to accept this invitation.</p>

<p>You can also go to <a href="https://crates.io/me/pending-invites">https://crates.io/me/pending-invites</a> to manage all of your crate ownership invitations.</p>

<p>--<br>The crates.io Team</p>
<script type="application/ld+json">
{
  "@context": "http://schema.org",
  "@type": "EmailMessage",
  "potentialAction": {
    "@type": "ViewAction",
    "target": "https://crates.io/accept-invite/[invite-token]",
    "url": "https://crates.io/accept-invite/[invite-token]",
    "name": "Accept Invitation"
  },
  "description": "Accept the crate ownership invitation",
  "publisher": {
    "@type": "Organization",
    "name": "crates.io",
    "url": "https://crates.io"
  }
}
</script>
--[boundary]--

----------------------------------------

To: user3@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Ownership invitation for "owners_multiple"
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Crates.io user foo has invited you to become an owner of the crate owners_multiple!

Visit https://crates.io/accept-invite/[invite-token] to accept this invitation.

You can also go to https://crates.io/me/pending-invites to manage all of your crate ownership invitations.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Crates.io user foo has invited you to become an owner of the crate <strong>owners_multiple</strong>!</p>

<p>Visit <a href="https://crates.io/accept-invite/[invite-token]">https://crates.io/accept-invite/[invite-token]</a> to accept this invitation.</p>

<p>You can also go to <a href="https://crates.io/me/pending-invites">https://crates.io/me/pending-invites</a> to manage all of your crate ownership invitations.</p>

<p>--<br>The crates.io Team</p>
<script type="application/ld+json">
{
  "@context": "http://schema.org",
  "@type": "EmailMessage",
  "potentialAction": {
    "@type": "ViewAction",
    "target": "https://crates.io/accept-invite/[invite-token]",
    "url": "https://crates.io/accept-invite/[invite-token]",
    "name": "Accept Invitation"
  },
  "description": "Accept the crate ownership invitation",
  "publisher": {
    "@type": "Organization",
    "name": "crates.io",
    "url": "https://crates.io"
  }
}
</script>
--[boundary]--

----------------------------------------

To: user2@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Ownership invitation for "owners_multiple"
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Crates.io user foo has invited you to become an owner of the crate owners_multiple!

Visit https://crates.io/accept-invite/[invite-token] to accept this invitation.

You can also go to https://crates.io/me/pending-invites to manage all of your crate ownership invitations.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Crates.io user foo has invited you to become an owner of the crate <strong>owners_multiple</strong>!</p>

<p>Visit <a href="https://crates.io/accept-invite/[invite-token]">https://crates.io/accept-invite/[invite-token]</a> to accept this invitation.</p>

<p>You can also go to <a href="https://crates.io/me/pending-invites">https://crates.io/me/pending-invites</a> to manage all of your crate ownership invitations.</p>

<p>--<br>The crates.io Team</p>
<script type="application/ld+json">
{
  "@context": "http://schema.org",
  "@type": "EmailMessage",
  "potentialAction": {
    "@type": "ViewAction",
    "target": "https://crates.io/accept-invite/[invite-token]",
    "url": "https://crates.io/accept-invite/[invite-token]",
    "name": "Accept Invitation"
  },
  "description": "Accept the crate ownership invitation",
  "publisher": {
    "@type": "Organization",
    "name": "crates.io",
    "url": "https://crates.io"
  }
}
</script>
--[boundary]--

----------------------------------------

To: user3@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Ownership invitation for "owners_multiple"
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Crates.io user foo has invited you to become an owner of the crate owners_multiple!

Visit https://crates.io/accept-invite/[invite-token] to accept this invitation.

You can also go to https://crates.io/me/pending-invites to manage all of your crate ownership invitations.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Crates.io user foo has invited you to become an owner of the crate <strong>owners_multiple</strong>!</p>

<p>Visit <a href="https://crates.io/accept-invite/[invite-token]">https://crates.io/accept-invite/[invite-token]</a> to accept this invitation.</p>

<p>You can also go to <a href="https://crates.io/me/pending-invites">https://crates.io/me/pending-invites</a> to manage all of your crate ownership invitations.</p>

<p>--<br>The crates.io Team</p>
<script type="application/ld+json">
{
  "@context": "http://schema.org",
  "@type": "EmailMessage",
  "potentialAction": {
    "@type": "ViewAction",
    "target": "https://crates.io/accept-invite/[invite-token]",
    "url": "https://crates.io/accept-invite/[invite-token]",
    "name": "Accept Invitation"
  },
  "description": "Accept the crate ownership invitation",
  "publisher": {
    "@type": "Organization",
    "name": "crates.io",
    "url": "https://crates.io"
  }
}
</script>
--[boundary]--
