src/tests/snapshots/integration__owners__new_crate_owner.snap
---
source: src/tests/owners.rs
expression: app.emails_snapshot().await
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Successfully published foo_owner@1.0.0
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Hello foo!

A new version of the foo_owner crate was published by your account (https://crates.io/users/foo) at [0000-00-00T00:00:00Z].

View v1.0.0 here: https://crates.io/crates/foo_owner/1.0.0

If you have questions or security concerns, you can contact us at help@crates.io. If you would like to stop receiving these security notifications, you can disable them in your account settings.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Hello foo!</p>

<p>A new version of the <strong>foo_owner</strong> crate was published by your account (https:&#x2f;&#x2f;crates.io&#x2f;users&#x2f;foo) at [0000-00-00T00:00:00Z].</p>

<p>View v1.0.0 here: <a href="https://crates.io/crates/foo_owner/1.0.0">https://crates.io/crates/foo_owner/1.0.0</a></p>

<p>If you have questions or security concerns, you can contact us at <a href="mailto:help@crates.io">help@crates.io</a>. If you would like to stop receiving these security notifications, you can disable them in your account settings.</p>

<p>--<br>The crates.io Team</p>
<script type="application/ld+json">
{
  "@context": "http://schema.org",
  "@type": "EmailMessage",
  "potentialAction": {
    "@type": "ViewAction",
    "target": "https://crates.io/crates/foo_owner/1.0.0",
    "url": "https://crates.io/crates/foo_owner/1.0.0",
    "name": "View Release"
  },
  "description": "View the newly published crate version",
  "publisher": {
    "@type": "Organization",
    "name": "crates.io",
    "url": "https://crates.io"
  }
}
</script>
--[boundary]--

----------------------------------------

To: Bar@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Ownership invitation for "foo_owner"
MIME-Version: 1.0
Content-Type: multipart/alternative;
 boundary="[boundary]"

--[boundary]
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable


Crates.io user foo has invited you to become an owner of the crate foo_owner!

Visit https://crates.io/accept-invite/[invite-token] to accept this invitation.

You can also go to https://crates.io/me/pending-invites to manage all of your crate ownership invitations.

--
The crates.io Team
--[boundary]
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable


<p>Crates.io user foo has invited you to become an owner of the crate <strong>foo_owner</strong>!</p>

<p>Visit <a href="https://crates.io/accept-invite/[invite-token]">https://crates.io/accept-invite/[invite-token]</a> to accept this invitation.</p>

<p>You can also go to <a href="https://crates.io/me/pending-invites">https://crates.io/me/pending-invites</a> to manage all of your crate ownership invitations.</p>

<p>--<br>The crates.io Team</p>
<script type="application/ld+json">
{
  "@context": "http://schema.org",
  "@type": "EmailMessage",
  "potentialAction": {
    "@type": "ViewAction",
    "target": "https://crates.io/accept-invite/[invite-token]",
    "url": "https://crates.io/accept-invite/[invite-token]",
    "name": "Accept Invitation"
  },
  "description": "Accept the crate ownership invitation",
  "publisher": {
    "@type": "Organization",
    "name": "crates.io",
    "url": "https://crates.io"
  }
}
</script>
--[boundary]--
